Include scripts above styles to fix safari 3 redraw issue, truncate application.js

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -47,7 +47,7 @@ img { border: 0; }
 /* @group Shared typography */
 
 .quiet {
-  color: #777;
+  color: #656565;
 }
 
 /* @end */
